--- a/frontend/src/app/inicio/inicio.component.html
+++ b/frontend/src/app/inicio/inicio.component.html
@@ -1,3 +1,4 @@
+
 <div id="divpadrecarousel">
   <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
@@ -7,16 +8,13 @@
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img class="d-block w-100" src="/assets/img/dogo1.jpg" alt="First slide">
+        <img class="d-block w-100" src="/assets/img/usuario2.jpessg" alt="First slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="/assets/img/dogo2.jpg" alt="Second slide">
+        <img class="d-block w-100" src="/assets/img/susten.jpg" alt="Second slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="/assets/img/dogo3.jpg" alt="Third slide">
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="/assets/img/dogo4.jpg" alt="Third slide">
+        <img class="d-block w-100" src="/assets/img/susten.jpg" alt="Third slide">
       </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -30,3 +28,5 @@
   </div>
 </div>
 
+
+   
