--- a/frontend/src/app/login/login.component.css
+++ b/frontend/src/app/login/login.component.css
@@ -6,7 +6,7 @@
     height: 100%;
 	margin:0px;
     position: fixed;
-    margin-top: -20px;
+    margin-top: -19px;
 }
 
 .modal-header {
@@ -26,11 +26,11 @@
 /* Modal Footer */
 .modal-footer {
     padding: 2px 16px;
-    background-color:rgba(184, 157, 1, 0.664);
+    background-color:rgba(184, 89, 1, 0.767);
     color: white;
 }
 
-/* Modal Content */
+/* Modal Contenido */
 .modal-content {
     width: 330px;
    top: 20px;
@@ -95,7 +95,15 @@ border-bottom: rgba(184, 157, 1, 0.664 2px solid);
 
 @media screen and (max-width: 600px) {
 
-   
+    #modal{
+        z-index: 9000;
+        background:#010a0c8f;
+        width:100%;
+        height: 100%;
+        margin:0px;
+        position: fixed;
+        margin-top: -29px;
+    }
   
     .modal-content {
         width: 330px;
