--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -7,7 +7,7 @@
      <a href=""> <span class="close">&times;</span></a>
     </div>
     <div class="imagenavatar">
-      <img src="/assets/img/dogo1.jpg" alt="" class="avatarimagen">
+      <img src="/assets/img/avatar2.png" alt="" class="avatarimagen">
     </div>
     <div class="modal-body">
       <div>
