--- a/frontend/src/app/inicio/inicio.component.css
+++ b/frontend/src/app/inicio/inicio.component.css
@@ -1,9 +1,10 @@
 
+
 #divpadrecarousel{
-    margin-top: 120px;
     width: 50%;
-    margin-left: 350px;
+    margin: auto;
     height: 400px;
+    
     }
     #divpadre{
         width: 600px;
@@ -22,12 +23,9 @@
         border: rgb(189, 230, 176) 5px solid;
         border-top-left-radius: 20px;
         border-bottom-right-radius: 20px;
+      
+        
     
-    }
-    
-    img{
-    width: 250px;
-    height: 350px;
     
     }
     
@@ -47,12 +45,6 @@
             height: 100%;
         background-color: rgb(255, 255, 255);
         }
-    
-        img{
-            width: 200px;
-            height: 200px;
-            
-            }
         
         }
         
