--- a/frontend/src/app/inicio/inicio.component.html
+++ b/frontend/src/app/inicio/inicio.component.html
@@ -8,7 +8,7 @@
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img class="d-block w-100" src="/assets/img/usuario2.jpessg" alt="First slide">
+        <img class="d-block w-100" src="/assets/img/desa.jpg" alt="First slide">
       </div>
       <div class="carousel-item">
         <img class="d-block w-100" src="/assets/img/susten.jpg" alt="Second slide">
@@ -28,5 +28,4 @@
   </div>
 </div>
 
-
-   
+<img src="/assets/img/susten.jpg" alt="">
