--- a/frontend/src/app/usuarios/usuarios.component.css
+++ b/frontend/src/app/usuarios/usuarios.component.css
@@ -29,13 +29,9 @@
     
     @media screen and (max-width: 700px) {
     
-        #divpadrecarousel{
-            width: 350px;
-            margin: auto;
-            
-            }
+      
     
-        #divpadre{
+        .divpadre{
             margin: auto;
             display: grid;
             grid-template-columns: 1fr;
@@ -43,9 +39,9 @@
             height: 100%;
         background-color: rgb(255, 255, 255);
         }
-        imgp{
-            width: 300px;
-            height: 100px;
+        img{
+            width: 100px;
+            height: 80px;
         }
         }
         
