--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -3,3 +3,4 @@
 <div style="min-height: 70vh" class="body">    <!-- para posicionar el footer siempre abajo <div style="min-height: 70vh  del viewport>-->
     <router-outlet></router-outlet>
     </div>
+<app-footer></app-footer>
