se agrega footer

--- a/frontend/src/app/usuarios/usuarios.component.html
+++ b/frontend/src/app/usuarios/usuarios.component.html
@@ -3,7 +3,7 @@
 <div class="divpadre">
     <div  *ngFor="let usuarios of posts" id="divhijos">
             <h5>{{usuarios.name}}</h5>
-        <a href=""><img src="https://randomuser.me/api/portraits/med/men/65.jpg" alt=""></a>
+        <a href=""><img src="/assets/img/avatar3.png" alt=""></a>
        <a href=""><p>Edad {{usuarios.age}} años</p></a>
         <a href=""><p>Id empleado:{{usuarios.idempleado}}</p></a>
         </div>  
