--- a/frontend/src/app/footer/footer.component.css
+++ b/frontend/src/app/footer/footer.component.css
@@ -1,15 +1,10 @@
-body{
-    height: 100%;
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box;
-    font-family: sans-serif;
-}
+
 footer{
     width: 100%;
     background: #202020;
     color: white;   
     bottom: 0%;
+    position: relative;
 
 }
 
